force-app/main/default/objects/Vehicle_Shipment__c/Vehicle_Shipment__c.object-meta.xml
<CustomObject>
    <label>Vehicle Shipment</label>
    <nameField>
        <displayFormat>Ship-{YYYYMM}-{00000}</displayFormat>
        <label>Vehicle Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Shipments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>