force-app/main/default/objects/Vehicle_Shipment__c/fields/B_L_No__c.field-meta.xml
<CustomField>
    <fullName>B_L_No__c</fullName>
    <label>B/L No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>