force-app/main/default/objects/Vehicle_Shipment__c/fields/CAR_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>CAR_Type_Code__c</fullName>
    <formula>Common_Access_Reference_CAR_Type__r.CAR_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAR Type Code</label>
    <type>Text</type>
</CustomField>