force-app/main/default/objects/Vehicle_Shipment__c/fields/Common_Access_Reference_CAR_Type__c.field-meta.xml
<CustomField>
    <fullName>Common_Access_Reference_CAR_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Common Access Reference (CAR) Type</label>
    <referenceTo>CAR_Type_Code__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>