force-app/main/default/objects/Vehicle_Shipment__c/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Origin</label>
    <referenceTo>Country_of_Origin__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>