force-app/main/default/objects/Vehicle_Shipment__c/fields/Country_of_Origin_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin_Code__c</fullName>
    <formula>Country_of_Origin__r.Country_of_Origin_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of Origin Code</label>
    <type>Text</type>
</CustomField>