force-app/main/default/objects/Vehicle_Shipment__c/fields/dec_type__c.field-meta.xml
<CustomField>
    <fullName>dec_type__c</fullName>
    <label>Declaration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DUT</fullName>
                <label>DUT: Duty</label>
            </value>
            <value>
                <fullName>GST</fullName>
                <label>GST: GST (including Duty Exemption)</label>
            </value>
            <value>
                <fullName>DNG</fullName>
                <label>DNG: Duty &amp; GST</label>
            </value>
            <value>
                <fullName>BKT</fullName>
                <label>BKT: Blanket (including blanket GST payment and duty exemption)</label>
            </value>
            <value>
                <fullName>SFZ</fullName>
                <label>SFZ: Storage in FTZ</label>
            </value>
            <value>
                <fullName>APS</fullName>
                <label>APS: Approved Premises/Schemes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>