force-app/main/default/objects/Vehicle_Shipment__c/fields/Declarant_Code__c.field-meta.xml
<CustomField>
    <fullName>Declarant_Code__c</fullName>
    <label>Declarant Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>