force-app/main/default/objects/Vehicle_Shipment__c/fields/Declarant_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Declarant_Entity_Identifier__c</fullName>
    <formula>Declarant_Name__r.Declarant_Entity_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declarant Entity Identifier</label>
    <type>Text</type>
</CustomField>