force-app/main/default/objects/Vehicle_Shipment__c/fields/Declarant_ID__c.field-meta.xml
<CustomField>
    <fullName>Declarant_ID__c</fullName>
    <defaultValue>&quot;TRW1.TRW1001&quot;</defaultValue>
    <label>Declarant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>