force-app/main/default/objects/Vehicle_Shipment__c/fields/Declarant_Person_Code__c.field-meta.xml
<CustomField>
    <fullName>Declarant_Person_Code__c</fullName>
    <formula>Declarant_Person_Name__r.Declarant_Person_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declarant Person Code</label>
    <type>Text</type>
</CustomField>