force-app/main/default/objects/Vehicle_Shipment__c/fields/Declarant_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Declarant_Person_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Declarant Person Name</label>
    <referenceTo>Declarant_Person__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>