force-app/main/default/objects/Vehicle_Shipment__c/fields/Declarant_Person_Phone_del__c.field-meta.xml
<CustomField>
    <fullName>Declarant_Person_Phone_del__c</fullName>
    <formula>Declarant_Person_Name__r.Declarant_Person_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declarant Person Phone</label>
    <type>Text</type>
</CustomField>