force-app/main/default/objects/Vehicle_Shipment__c/fields/Declaration_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration Indicator</label>
    <type>Checkbox</type>
</CustomField>