force-app/main/default/objects/Vehicle_Shipment__c/fields/Declaration_Type__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Declaration Type</label>
    <referenceTo>Declaration_Type__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>