force-app/main/default/objects/Vehicle_Shipment__c/fields/Declaration_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Type_Code__c</fullName>
    <formula>Declaration_Type__r.Declaration_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declaration Type Code</label>
    <type>Text</type>
</CustomField>