force-app/main/default/objects/Vehicle_Shipment__c/fields/Importer_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Importer_Entity_Identifier__c</fullName>
    <formula>Importer_Name__r.Declarant_Entity_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importer Entity Identifier</label>
    <type>Text</type>
</CustomField>