force-app/main/default/objects/Vehicle_Shipment__c/fields/Importer_Name__c.field-meta.xml
<CustomField>
    <fullName>Importer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Importer Name</label>
    <referenceTo>Declarant_Name__c</referenceTo>
    <relationshipLabel>Vehicle Shipments (Importer Name)</relationshipLabel>
    <relationshipName>Vehicle_Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>