force-app/main/default/objects/Vehicle_Shipment__c/fields/Inward_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Inward_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inward  Carrier</label>
    <referenceTo>Inward_Carrier__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>