force-app/main/default/objects/Vehicle_Shipment__c/fields/Inward_Carrier_Agent_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Inward_Carrier_Agent_Entity_Identifier__c</fullName>
    <formula>Inward_Carrier__r.Inward_Carrier_Agent_Entity_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inward Carrier Agent Entity Identifier</label>
    <type>Text</type>
</CustomField>