force-app/main/default/objects/Vehicle_Shipment__c/fields/Message_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Message_Ref_No__c</fullName>
    <label>Message Ref. No.</label>
    <length>14</length>
    <type>Text</type>
</CustomField>