force-app/main/default/objects/Vehicle_Shipment__c/fields/Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Pack_Type__c</fullName>
    <label>Cargo Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5: Other non-containerized</fullName>
            </value>
            <value>
                <fullName>9: Containerized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>