force-app/main/default/objects/Vehicle_Shipment__c/fields/Permit_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Approved_Date__c</fullName>
    <label>Permit Approved Date</label>
    <length>17</length>
    <type>Text</type>
</CustomField>