force-app/main/default/objects/Vehicle_Shipment__c/fields/Port_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Discharge__c</fullName>
    <label>Port of Discharge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>