force-app/main/default/objects/Vehicle_Shipment__c/fields/Port_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Loading</label>
    <referenceTo>Port_of_Loading__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>