force-app/main/default/objects/Vehicle_Shipment__c/fields/Port_of_Loading_Description__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading_Description__c</fullName>
    <formula>Port_of_Loading__r.Port_of_Loading_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Port of Loading Description</label>
    <type>Text</type>
</CustomField>