force-app/main/default/objects/Vehicle_Shipment__c/fields/receipt_loc_loc_code__c.field-meta.xml
<CustomField>
    <fullName>receipt_loc_loc_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Location Name</label>
    <referenceTo>Local_Type_Code__c</referenceTo>
    <relationshipLabel>Vehicle Shipments (Receipt Location Code)</relationshipLabel>
    <relationshipName>Vehicle_Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>