force-app/main/default/objects/Vehicle_Shipment__c/fields/receipt_loc_loc_name__c.field-meta.xml
<CustomField>
    <fullName>receipt_loc_loc_name__c</fullName>
    <formula>receipt_loc_loc_code__r.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Location Code</label>
    <type>Text</type>
</CustomField>