force-app/main/default/objects/Vehicle_Shipment__c/fields/Release_Loc_loc_code__c.field-meta.xml
<CustomField>
    <fullName>Release_Loc_loc_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Location Code</label>
    <referenceTo>Local_Type_Code__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>