force-app/main/default/objects/Vehicle_Shipment__c/fields/release_loc_loc_name__c.field-meta.xml
<CustomField>
    <fullName>release_loc_loc_name__c</fullName>
    <formula>Release_Loc_loc_code__r.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Location Name</label>
    <type>Text</type>
</CustomField>