force-app/main/default/objects/Vehicle_Shipment__c/fields/Shipping_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>