force-app/main/default/objects/Vehicle_Shipment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Document Uploaded</fullName>
            </value>
            <value>
                <fullName>Partially_Matched</fullName>
                <label>Partially Matched</label>
            </value>
            <value>
                <fullName>Matching_Completed</fullName>
                <label>Matching Completed</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>