force-app/main/default/objects/Vehicle_Shipment__c/fields/Storage_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location_Code__c</fullName>
    <formula>Storage_Location_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Storage Location Code</label>
    <type>Text</type>
</CustomField>