force-app/main/default/objects/Vehicle_Shipment__c/fields/Storage_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Storage Location Name</label>
    <referenceTo>Local_Type_Code__c</referenceTo>
    <relationshipLabel>Vehicle Shipments (Storage Location Name)</relationshipLabel>
    <relationshipName>Vehicle_Shipments2</relationshipName>
    <type>Lookup</type>
</CustomField>