force-app/main/default/objects/Vehicle_Shipment__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>