force-app/main/default/objects/Vehicle_Shipment__c/fields/TN_GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>TN_GST_Rate__c</fullName>
    <defaultValue>0.7</defaultValue>
    <label>TN GST Rate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>