force-app/main/default/objects/Vehicle_Shipment__c/fields/TN_Permit_No__c.field-meta.xml
<CustomField>
    <fullName>TN_Permit_No__c</fullName>
    <label>TN Permit No.</label>
    <length>11</length>
    <type>Text</type>
</CustomField>