force-app/main/default/objects/Vehicle_Shipment__c/fields/TN_Remarks__c.field-meta.xml
<CustomField>
    <fullName>TN_Remarks__c</fullName>
    <label>TN Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>