force-app/main/default/objects/Vehicle_Shipment__c/fields/TN_Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>TN_Sender_ID__c</fullName>
    <defaultValue>&quot;TRW1.TRW1001&quot;</defaultValue>
    <label>TN Sender ID</label>
    <length>17</length>
    <type>Text</type>
</CustomField>