force-app/main/default/objects/Vehicle_Shipment__c/fields/Transport_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transport_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Mode</label>
    <referenceTo>Transport_Mode__c</referenceTo>
    <relationshipLabel>Vehicle Shipments</relationshipLabel>
    <relationshipName>Vehicle_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>