force-app/main/default/objects/Vehicle_Shipment__c/fields/Transport_Mode_Code__c.field-meta.xml
<CustomField>
    <fullName>Transport_Mode_Code__c</fullName>
    <formula>Transport_Mode__r.Transport_Mode_Code__c</formula>
    <label>Transport Mode Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>