force-app/main/default/objects/Vehicle_Shipment__c/fields/Vessel_Code__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Code__c</fullName>
    <label>Vessel Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>