force-app/main/default/objects/Vehicle_Shipment__c/fields/Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Name__c</fullName>
    <label>Vessel Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>