force-app/main/default/objects/Vehicle_Shipment__c/recordTypes/MF_Shipment.recordType-meta.xml
<RecordType>
    <fullName>MF_Shipment</fullName>
    <active>true</active>
    <label>MF/DPS Shipment</label>
</RecordType>