force-app/main/default/objects/Vehicle_Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Franchise_Code__c</columns>
    <columns>Vessel_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Shipment_Date__c</columns>
    <columns>ETA__c</columns>
    <columns>B_L_No__c</columns>
    <columns>Remarks__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>