force-app/main/default/objects/Vehicle_Shipment__c/listViews/New_queues_to_NCL_Vehicle_Shipment.listView-meta.xml
<ListView>
    <fullName>New_queues_to_NCL_Vehicle_Shipment</fullName>
    <filterScope>Queue</filterScope>
    <label>New queues to NCL</label>
    <queue>New_queues_to_NCL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>