force-app/main/default/objects/Vehicle_Shipment__c/listViews/Shipment_Arriving_This_Month.listView-meta.xml
<ListView>
    <fullName>Shipment_Arriving_This_Month</fullName>
    <columns>B_L_No__c</columns>
    <columns>NAME</columns>
    <columns>Franchise_Code__c</columns>
    <columns>ETA__c</columns>
    <columns>Port_of_Loading_Description__c</columns>
    <columns>receipt_loc_loc_name__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETA__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Shipment Arriving This Month</label>
</ListView>